# SCFT

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
custom/: footer.html
src/: Prisma.h  basic_shell.cpp  basic_shell.hpp  crc32.cpp  crc32.hpp  scft_message.cpp  scft_message.hpp  scrolling_log.cpp  scrolling_log.hpp  smgp_message.cpp  smgp_message.hpp
src/scft-clt/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  scft-clt_version.hpp.in
src/scft-srv/: CMakeLists.txt  main.cpp  member.cpp  member.hpp  room.cpp  room.hpp  scft-srv_version.hpp.in  server.cpp  server.hpp
src/smgp-clt/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  smgp-clt_version.hpp.in
src/smgp-srv/: CMakeLists.txt  main.cpp  member.cpp  member.hpp  room.cpp  room.hpp  server.cpp  server.hpp  smgp-srv_version.hpp.in
